--- a/index.html
+++ b/index.html
@@ -20,17 +20,11 @@
             background-color:#eeeeee;
         }
         body, p {
-            color: #f1f1f8;
-            font: 200 1.25rem/1.5rem 'Dosis', sans-serif;
-            letter-spacing: 0.0625rem;
-        }
-        h5 {
-            color: #f1f1f8;
-            font: 400 1.5rem/1.625rem 'Dosis', sans-serif;
+            color: #404142;
         }
         h6 {
-            color: #f1f1f8;
-            font: 400 1.25rem/1.5rem 'Dosis', sans-serif;
+            color: #404142;
+            font-weight: bold;
         }
         ul {
             margin: 0;
@@ -38,16 +32,10 @@
             list-style: none;
         }
         a {
-            color: #f1f1f8;
             text-decoration: underline;
-            cursor: pointer;
         }
         .content {
-            padding-top: 5rem;
-            padding-bottom: 2rem;
-        }
-        #accordionFaq * {
-            color: #404142;
+            padding: 16px 0;
         }
         #accordionFaq .card {
             margin-top: 1.063rem;
@@ -61,7 +49,6 @@
             border: none;
             background-color: transparent;
             cursor: pointer;
-            padding: 1rem;
         }
         #accordionFaq .card-header * {
             color: #ae2038;
@@ -98,9 +85,9 @@
                         <div class="card">
                             <div class="card-header" id="heading1" data-toggle="collapse" data-target="#no1"
                                 aria-expanded="false" aria-controls="no1">
-                                <h5 class="mb-0">
-                                    # 1. Cannot access to "adrama.online"
-                                </h5>
+                                <h6 class="mb-0">
+                                    1. Cannot access to "adrama.online"
+                                </h6>
                             </div>
 
                             <div id="no1" class="collapse" aria-labelledby="heading1">
@@ -109,12 +96,12 @@
                                         <div class="media-body">
                                             <h6 class="media-heading">Website may be restricted in some reasons.</h6>
                                             <p>
-                                                Please use the secure VPN app named 1.1.1.1 to access adrama.online
+                                                Please use the secure VPN app named 1.1.1.1 to access "adrama.online"
                                             </p>
                                             <ol>
                                                 <li>Install VPN App (Link Below)</li>
                                                 <li>Open and connect VPN</li>
-                                                <li>Open browser and access to adrama.online</li>
+                                                <li>Open browser and access to "adrama.online"</li>
                                             </ol>
                                         </div>
 
@@ -123,12 +110,12 @@
                                         <div class="media-body">
                                             <h6 class="media-heading">網站可能因某些原因被限制</h6>
                                             <p>
-                                                請使用名為 1.1.1.1 的安全 VPN 應用程序訪問 adrama.online
+                                                請使用名為 1.1.1.1 的安全 VPN 應用程序訪問 "adrama.online"
                                             </p>
                                             <ol>
                                                 <li>安裝 VPN 應用程序（以下鏈接）</li>
                                                 <li>打開並連接 VPN</li>
-                                                <li>打開瀏覽器並訪問 adrama.online</li>
+                                                <li>打開瀏覽器並訪問 "adrama.online"</li>
                                             </ol>
                                         </div>
                                     </div>
@@ -148,9 +135,9 @@
                         <div class="card">
                             <div class="card-header" id="heading1" data-toggle="collapse" data-target="#no2"
                                 aria-expanded="false" aria-controls="no2">
-                                <h5 class="mb-0">
-                                    # 2. Unable to load anything
-                                </h5>
+                                <h6 class="mb-0">
+                                    2. Unable to load anything
+                                </h6>
                             </div>
 
                             <div id="no2" class="collapse" aria-labelledby="heading2">
@@ -225,9 +212,9 @@
                         <div class="card">
                             <div class="card-header" id="heading3" data-toggle="collapse" data-target="#no3"
                                 aria-expanded="false" aria-controls="no3">
-                                <h5 class="mb-0">
-                                    # 3. Google Play Services issue
-                                </h5>
+                                <h6 class="mb-0">
+                                    3. Google Play Services issue
+                                </h6>
                             </div>
 
                             <div id="no3" class="collapse" aria-labelledby="heading3">
@@ -282,9 +269,9 @@
                         <div class="card">
                             <div class="card-header" id="heading4" data-toggle="collapse" data-target="#no4"
                                 aria-expanded="false" aria-controls="no4">
-                                <h5 class="mb-0">
-                                    # 4. Browser on Android TV
-                                </h5>
+                                <h6 class="mb-0">
+                                    4. Browser on Android TV
+                                </h6>
                             </div>
 
                             <div id="no4" class="collapse" aria-labelledby="heading4">
@@ -338,9 +325,9 @@
                         <div class="card">
                             <div class="card-header" id="heading5" data-toggle="collapse" data-target="#no5"
                                 aria-expanded="false" aria-controls="no5">
-                                <h5 class="mb-0">
-                                    # 5. Laptop, Desktop run app
-                                </h5>
+                                <h6 class="mb-0">
+                                    5. Laptop, Desktop run app
+                                </h6>
                             </div>
 
                             <div id="no5" class="collapse" aria-labelledby="heading5">
@@ -386,9 +373,9 @@
                         <div class="card">
                             <div class="card-header" id="heading6" data-toggle="collapse" data-target="#no6"
                                 aria-expanded="false" aria-controls="no6">
-                                <h5 class="mb-0">
-                                    # 6. App's permission
-                                </h5>
+                                <h6 class="mb-0">
+                                    6. App's permission
+                                </h6>
                             </div>
 
                             <div id="no6" class="collapse" aria-labelledby="heading6">
