--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="card-header" id="heading1" data-toggle="collapse" data-target="#no1"
                                 aria-expanded="false" aria-controls="no1">
                                 <h6 class="mb-0">
-                                    1. Cannot access to "adrama.online"
+                                    1. Cannot access to "adrama.app"
                                 </h6>
                             </div>
 
@@ -96,12 +96,12 @@
                                         <div class="media-body">
                                             <h6 class="media-heading">Website may be restricted in some reasons.</h6>
                                             <p>
-                                                Please use the secure VPN app named 1.1.1.1 to access "adrama.online"
+                                                Please use the secure VPN app named 1.1.1.1 to access "adrama.app"
                                             </p>
                                             <ol>
                                                 <li>Install VPN App (Link Below)</li>
                                                 <li>Open and connect VPN</li>
-                                                <li>Open browser and access to "adrama.online"</li>
+                                                <li>Open browser and access to "adrama.app"</li>
                                             </ol>
                                         </div>
 
@@ -110,12 +110,12 @@
                                         <div class="media-body">
                                             <h6 class="media-heading">網站可能因某些原因被限制</h6>
                                             <p>
-                                                請使用名為 1.1.1.1 的安全 VPN 應用程序訪問 "adrama.online"
+                                                請使用名為 1.1.1.1 的安全 VPN 應用程序訪問 "adrama.app"
                                             </p>
                                             <ol>
                                                 <li>安裝 VPN 應用程序（以下鏈接）</li>
                                                 <li>打開並連接 VPN</li>
-                                                <li>打開瀏覽器並訪問 "adrama.online"</li>
+                                                <li>打開瀏覽器並訪問 "adrama.app"</li>
                                             </ol>
                                         </div>
                                     </div>
